--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@
 }
 .bee-container{
   position: absolute;
-  top:100px;
-  left:200px;
+  top:25%;
+  left:0%;
   opacity: 0%;
   animation-name: bee-animation;
   animation-duration: 25s;
@@ -20,15 +20,18 @@
   animation-iteration-count: infinite;
 }
 @keyframes bee-animation {
-  0%   { opacity: 100%; left:200px; top:100px; transform: rotateY(0deg);}
-  12.5%  { opacity: 100%; left:300px; top:150px;  transform: rotateY(0deg);}
-  25%  { opacity: 100%; left:400px; top:100px;  transform: rotateY(0deg);}
-  37.5%  { opacity: 100%; left:500px; top: 200px;  transform: rotateY(0deg);}
-  50% { opacity: 100%; left: 600px; top:100px;  transform: rotateY(0deg);}
-  62.5% { opacity: 100%; left:500px; top:150px; transform: rotateY(180deg);}
-  75% { opacity: 100%; left:400px; top:100px; transform: rotateY(180deg);}
-  87.5% { opacity: 100%; left:300px; top:100px;transform: rotateY(180deg);}
-  100% { opacity: 100%; left:200px; top:100px; transform: rotateY(0deg);}
+  0%   { opacity: 100%; left:0%; top:100px; transform: rotateY(0deg);}
+  12.5%  { opacity: 100%; left:25%; top:150px;  transform: rotateY(0deg);}
+  25%  { opacity: 100%; left:50%; top:100px;  transform: rotateY(0deg);}
+  37.5%  { opacity: 100%; left:75%; top: 200px;  transform: rotateY(0deg);}
+  50% { opacity: 100%; left: 105%; top:100px;  transform: rotateY(0deg);}
+  52.5% { opacity: 100%; left:105%; top:150px; transform: rotateY(180deg);}
+  62.5% { opacity: 100%; left:75%; top:150px; transform: rotateY(180deg);}
+  75% { opacity: 100%; left:50%; top:100px; transform: rotateY(180deg);}
+  87.5% { opacity: 100%; left:25%; top:125px;transform: rotateY(180deg);}
+  97.5% { opacity: 100%; left:0%; top:100px;transform: rotateY(180deg);}
+  99.5% { opacity: 100%; left:-5%; top:125px;transform: rotateY(0deg);}
+  100% { opacity: 100%; left:0%; top:100px; transform: rotateY(0deg);}
 }
 body {
   display: flex;
